adding function input for pizza sizes, and name

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <title>Order Pizza</title>
 </head>
 <body>
-
+  <h1>Caligula's Pizza</h1>
+  <div>
+    <form id="pizzaOrderForm">
+      <div class="container">
+        <select id="pizzaSize" class="form-control">
+          <option value="small">Small 13" pizza</option>
+          <option value="medium">Medium 18" pizza</option>
+          <option value="large">Large 26" pizza</option>
+        </select>
+        <button type="submit" class="btn btn-success">Place Order now!</button>
+      </div>
+    </form>
+    <h2 = "#YourOrder"></h2>
+  </div>
 </body>
 </html>
