--- a/index.html
+++ b/index.html
@@ -1,27 +1,71 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.1.0.js"></script>
-  <script src="js/scripts.js"></script>
-  <meta charset="utf-8">
-  <title>Order Pizza</title>
-</head>
-<body>
-  <h1>Caligula's Pizza</h1>
-  <div>
-    <form id="pizzaOrderForm">
-      <div class="container">
-        <select id="pizzaSize" class="form-control">
-          <option value="small">Small 13" pizza</option>
-          <option value="medium">Medium 18" pizza</option>
-          <option value="large">Large 26" pizza</option>
-        </select>
-        <button type="submit" class="btn btn-success">Place Order now!</button>
-      </div>
-    </form>
-    <h2 = "#YourOrder"></h2>
-  </div>
-</body>
-</html>
+  <!DOCTYPE html>
+  <html>
+  <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.1.0.js"></script>
+    <script src="js/scripts.js"></script>
+    <meta charset="utf-8">
+    <title>Order Pizza</title>
+  </head>
+  <body>
+    <h1>Caligula's Pizza</h1>
+    <div>
+      <form id="pizzaOrderForm">
+        <div class="container">
+          <select id="pizzaSize" class="form-control">
+            <option value="small">Small 13" pizza</option>
+            <option value="medium">Medium 18" pizza</option>
+            <option value="large">Large 26" pizza</option>
+          </select>
+        </div>
+      <h2>Topping selection!</h2>
+        <div class="container">
+          <div id = "toppings" class="checkbox">
+            <h3>in cibis</h3>
+            <label><input type="checkbox" value="1">wild boar</label>
+            </div>
+            <div class="checkbox">
+            <label><input type="checkbox" value="1">mutton</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">hare</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">sausage</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">sardines</label>
+          </div>
+          <h3>et veggitables</h3>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">olives</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">artichokes</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">leeks</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">parsnips</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">mushrooms</label>
+          </div>
+          <h3>Specialites</h3>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">peacock</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="1">ostrich</label>
+          </div>
+        </div>
+
+      <button type="submit" class="btn btn-success">Place Order now!</button>
+
+      </form>
+      <h2 = "#YourOrder"></h2>
+    </div>
+  </body>
+  </html>
