behavior: synced Topping checkboxes with UI logic function

--- a/index.html
+++ b/index.html
@@ -20,47 +20,37 @@
           </select>
         </div>
       <h2>Topping selection!</h2>
-        <div class="container">
-          <div id = "toppings" class="checkbox">
+          <div id = "toppings">
             <h3>in cibis</h3>
             <label><input type="checkbox" value="1">wild boar</label>
-            </div>
-            <div class="checkbox">
+
             <label><input type="checkbox" value="1">mutton</label>
-          </div>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">hare</label>
-          </div>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">sausage</label>
-          </div>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">sardines</label>
-          </div>
+
           <h3>et veggitables</h3>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">olives</label>
-          </div>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">artichokes</label>
-          </div>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">leeks</label>
-          </div>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">parsnips</label>
-          </div>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">mushrooms</label>
-          </div>
+
           <h3>Specialites</h3>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">peacock</label>
-          </div>
-          <div class="checkbox">
+
             <label><input type="checkbox" value="1">ostrich</label>
           </div>
-        </div>
+
 
       <button type="submit" class="btn btn-success">Place Order now!</button>
 
