adding quantity input behavior to html and ui

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 
             <label><input type="checkbox" value="1">ostrich</label>
           </div>
+          <h3>Quantity</h3>
+          <div class= "form-group">
+            <label for = "quantity"></label>
+              <input type="text" class="form-control" id = "quantity"></input>
+          </div>
 
 
       <button type="submit" class="btn btn-success">Place Order now!</button>
