behavior: UI coverting topping quantity int into strong then place into new object

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
           <h3>Quantity</h3>
           <div class= "form-group">
             <label for = "quantity"></label>
-              <input type="text" class="form-control" id = "quantity"></input>
+              <input type="text" id = "quantity"></input>
           </div>
 
 
       <button type="submit" class="btn btn-success">Place Order now!</button>
 
       </form>
-      <h2 = "#YourOrder"></h2>
+      <ul id = "yourOrder"></ul>
     </div>
   </body>
   </html>
