--- a/index.html
+++ b/index.html
@@ -1,66 +1,140 @@
-  <!DOCTYPE html>
-  <html>
+<!DOCTYPE html>
+<html>
   <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.1.0.js"></script>
-    <script src="js/scripts.js"></script>
-    <meta charset="utf-8">
-    <title>Order Pizza</title>
+    <script type="text/javascript" src="js/jquery-3.1.0.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
+    <title>caligula's pizza palace</title>
   </head>
   <body>
-    <h1>Caligula's Pizza</h1>
-    <div>
-      <form id="pizzaOrderForm">
-        <div class="container">
-          <select id="pizzaSize" class="form-control">
-            <option value="small">Small 13" pizza</option>
-            <option value="medium">Medium 18" pizza</option>
-            <option value="large">Large 26" pizza</option>
-          </select>
+    <div class="banner">
+      <img src="images/caligulia.png" alt="An image of a pizza" />
+      <h1>Caligulia's Pizza Palace</h1>
+    </div>
+      <div class="container">
+      <form class="" action="index.html" method="post">
+        <h3>Place your order here:</h3>
+
         </div>
-      <h2>Topping selection!</h2>
-          <div id = "toppings">
+        <div id="sizeOfPizza" class="form-group">
+          <p>
+            Select size of Pizza:
+          </p>
+          <label class="form-check-inline">
+          <input class="form-check-input" type="radio" name="pizzaSize" id="small" value="13" checked> Small
+          </label>
+          <label class="form-check-inline">
+          <input class="form-check-input" type="radio" name="pizzaSize" id="medium" value="18"> Medium
+          </label>
+          <label class="form-check-inline">
+          <input class="form-check-input" type="radio" name="pizzaSize" id="large" value="23"> Large
+          </label>
+        </div>
+        <div id="toppings" class="form-group">
+          <p>
+            Select additional toppings:
+          </p>
+          <ul>
+            <li>$1.30 each for small</li>
+            <li>$1.80 each for medium</li>
+            <li>$2.30 each for large</li>
+          </ul>
+          <div class="form-check">
             <h3>in cibis</h3>
-            <label><input type="checkbox" value="1">wild boar</label>
 
-            <label><input type="checkbox" value="1">mutton</label>
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="wild boar">
+            wild boar
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="mutton">
+            mutton
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="hare">
+            hare
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="sausage">
+            sausage
+            </label>
+          </div>
+          <div class="form-check">
 
-            <label><input type="checkbox" value="1">hare</label>
-
-            <label><input type="checkbox" value="1">sausage</label>
-
-            <label><input type="checkbox" value="1">sardines</label>
-
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="sardines">
+            Feta Cheese
+            </label>
+          </div>
           <h3>et veggitables</h3>
 
-            <label><input type="checkbox" value="1">olives</label>
-
-            <label><input type="checkbox" value="1">artichokes</label>
-
-            <label><input type="checkbox" value="1">leeks</label>
-
-            <label><input type="checkbox" value="1">parsnips</label>
-
-            <label><input type="checkbox" value="1">mushrooms</label>
-
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="olives">
+            olives
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="artichokes">
+            artichokes
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="leeks">
+          leeks
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="parsnips">
+            parsnips
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="mushrooms">
+            mushrooms
+            </label>
+          </div>
           <h3>Specialites</h3>
 
-            <label><input type="checkbox" value="1">peacock</label>
-
-            <label><input type="checkbox" value="1">ostrich</label>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="peacock">
+            peacock
+            </label>
           </div>
-          <h3>Quantity</h3>
-          <div class= "form-group">
-            <label for = "quantity"></label>
-              <input type="text" id = "quantity"></input>
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="ostrich">
+            ostrich
+            </label>
           </div>
-
-
-      <button type="submit" class="btn btn-success">Place Order now!</button>
-
+          <br>
+          <div id="customerDetails">
+            <div class="form-group">
+              <label for="name">Name: </label>
+              <input type="text" class="form-control" name="name" id="customersName" required>
+            </div>
+            <br>
+        </div>
+        <button type="submit" class="btn btn-primary" name="button"> Ordo Adde!</button>
       </form>
-      <ul id = "yourOrder"></ul>
+      <div id="grandTotal">
+        <h4><span class="customersName"></span>'s total pizza order!</h4>
+        <ul id="totalPizzaOrder">
+        </ul>
+        <button type="button" id="placeOrder" class="btn btn-success">'Place Order!' Ordo Locus!</button>
+      </div>
     </div>
   </body>
-  </html>
+</html>
