--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <label class="form-check-label">
             <input class="form-check-input" type="checkbox" value="sardines">
-            Feta Cheese
+            sardines
             </label>
           </div>
           <h3>et veggitables</h3>
